<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.SuscribirseActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_suscribirse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_precio"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_visualizaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_visualizaciones"
        app:layout_constraintTop_toBottomOf="@id/tv_precio"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ed_visualizaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_precio"
        app:layout_constraintStart_toEndOf="@+id/tv_visualizaciones"
        android:inputType="number"/>

    <TextView
        android:id="@+id/tv_precio_visualizacviones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_precio_visualizaciones"
        app:layout_constraintTop_toBottomOf="@id/ed_visualizaciones"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_contratar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_contratar"
        app:layout_constraintTop_toBottomOf="@id/tv_precio_visualizacviones"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>